// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichText should apply active formatting for inline paste 1`] = `
"<!-- wp:paragraph -->
<p><strong>132</strong>3</p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should apply formatting when selection is collapsed 1`] = `
"<!-- wp:paragraph -->
<p>Some <strong>bold</strong>.</p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should apply formatting with primary shortcut 1`] = `
"<!-- wp:paragraph -->
<p><strong>test</strong></p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should apply multiple formats when selection is collapsed 1`] = `
"<!-- wp:paragraph -->
<p><strong><em>1</em></strong>.</p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should handle Home and End keys 1`] = `
"<!-- wp:paragraph -->
<p>-<strong>12</strong>+</p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should handle change in tag name gracefully 1`] = `
"<!-- wp:heading {\\"level\\":3} -->
<h3></h3>
<!-- /wp:heading -->"
`;

exports[`RichText should keep internal selection after blur 1`] = `
"<!-- wp:paragraph -->
<p>1<strong>2</strong></p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should make bold after split and merge 1`] = `
"<!-- wp:paragraph -->
<p>1<strong>2</strong></p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should navigate arround emoji 1`] = `
"<!-- wp:paragraph -->
<p>1🍓</p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should navigate consecutive format boundaries 1`] = `
"<!-- wp:paragraph -->
<p><strong>1</strong><em>2</em></p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should navigate consecutive format boundaries 2`] = `
"<!-- wp:paragraph -->
<p><strong>1</strong>-<em>2</em></p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should not format text after code backtick 1`] = `
"<!-- wp:paragraph -->
<p>A <code>backtick</code> and more.</p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should not lose selection direction 1`] = `
"<!-- wp:paragraph -->
<p><strong>1</strong>2-3</p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should not split rich text on inline paste 1`] = `
"<!-- wp:paragraph -->
<p>123</p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should not split rich text on inline paste with formatting 1`] = `
"<!-- wp:paragraph -->
<p>a1<strong>2</strong>3b</p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should not undo backtick transform with backspace after selection change 1`] = `""`;

exports[`RichText should not undo backtick transform with backspace after typing 1`] = `""`;

exports[`RichText should only mutate text data on input 1`] = `
"<!-- wp:paragraph -->
<p>1<strong>2</strong>34</p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should paste list contents into paragraph 1`] = `
"<!-- wp:list -->
<ul><li>1<ul><li>2</li></ul></li></ul>
<!-- /wp:list -->

<!-- wp:paragraph -->
<p>1<br>2</p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should paste paragraph contents into list 1`] = `
"<!-- wp:paragraph -->
<p>1<br>2</p>
<!-- /wp:paragraph -->

<!-- wp:list -->
<ul><li>1</li><li>2</li></ul>
<!-- /wp:list -->"
`;

exports[`RichText should preserve internal formatting 1`] = `
"<!-- wp:paragraph -->
<p><mark style=\\"background-color:rgba(0, 0, 0, 0)\\" class=\\"has-inline-color has-cyan-bluish-gray-color\\">1</mark></p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should preserve internal formatting 2`] = `
"<!-- wp:paragraph -->
<p><mark style=\\"background-color:rgba(0, 0, 0, 0)\\" class=\\"has-inline-color has-cyan-bluish-gray-color\\">1</mark></p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p><mark style=\\"background-color:rgba(0, 0, 0, 0)\\" class=\\"has-inline-color has-cyan-bluish-gray-color\\">1</mark></p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should return focus when pressing formatting button 1`] = `
"<!-- wp:paragraph -->
<p>Some <strong>bold</strong>.</p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should run input rules after composition end 1`] = `
"<!-- wp:paragraph -->
<p><code>a</code></p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should split rich text on paste 1`] = `
"<!-- wp:paragraph -->
<p>a</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>1</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>2</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>b</p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should transform backtick to code 1`] = `
"<!-- wp:paragraph -->
<p>A <code>backtick</code></p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should transform backtick to code 2`] = `
"<!-- wp:paragraph -->
<p>A \`backtick\`</p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should undo backtick transform with backspace 1`] = `
"<!-- wp:paragraph -->
<p>\`a\`</p>
<!-- /wp:paragraph -->"
`;

exports[`RichText should update internal selection after fresh focus 1`] = `
"<!-- wp:paragraph -->
<p>1<strong>2</strong></p>
<!-- /wp:paragraph -->"
`;
